# lazy_loading_lab

./: pyproject.toml
lazy_loading_lab/: main.py
lazy_loading_lab/core/: lazy.py
lazy_loading_lab/services/: base.py  h1.py  lazy.py
