[project]
name = "lazy-loading-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Arthur Fernandes",email = "arthur0139@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
